SUBDIRS = otl parsers egraph smtsolvers cnfizers tsolvers simplifiers api

noinst_LTLIBRARIES = libopensmt.la

libopensmt_la_SOURCES = 
libopensmt_la_LIBADD = egraph/libegraph.la \
		       parsers/libparsers.la \
		       smtsolvers/libsmtsolvers.la \
		       cnfizers/libcnfizers.la \
		       tsolvers/libtsolvers.la \
		       simplifiers/libsimplifiers.la \
		       otl/libotl.la \
		       api/libapi.la
