noinst_LTLIBRARIES = libsimplifiers.la

INCLUDES=$(config_includedirs)

libsimplifiers_la_SOURCES = TopLevelProp.h TopLevelProp.C \
			    ExpandITEs.h ExpandITEs.C \
			    BVNormalize.h BVNormalize.C \
			    LACanonizer.h LACanonizer.C \
			    LATopLevelProp.h LATopLevelProp.C \
			    DLCanonizer.h DLCanonizer.C \
			    BVBooleanize.h BVBooleanize.C 
			    
#DLTopLevelProp.h DLTopLevelProp.C \
#StaticLearning.h StaticLearning.C
#SimplifyITEs.h SimplifyITEs.C
#RDLRefactor.h RDLRefactor.C
